--- a/templates/home.html
+++ b/templates/home.html
@@ -8,25 +8,30 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="MyApp Logo"> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('convert') }}">Convert</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('list_outputs') }}">Outputs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('list_uploads') }}">Uploads</a>
-                </li>
-                
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('convert') }}">Convert</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('list_uploads') }}">Uploads</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('list_outputs') }}">Outputs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('upload_to_bc365') }}">Upload to BC365</a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     <div class="container">
         <h1 class="mt-5">Bonjour dans l'interface de conversion de  EDIFACT vers CSV  </h1>
         <p class="lead">L'objectif de cette interface est de recevoir les fichiers EDIFACT,et le convertir en CSV dans le but de l'integrer a Business central</p>
