--- a/templates/output.html
+++ b/templates/output.html
@@ -1,45 +1,52 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>MSCONS to CSV Converter - Outputs</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+    <!doctype html>
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>MSCONS to CSV Converter - Outputs</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='stylesoutputs.css') }}">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="MyApp Logo"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('convert') }}">Convert</a>
+                  <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('list_outputs') }}">Outputs</a>
+                  <a class="nav-link" href="{{ url_for('convert') }}">Convert</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('list_uploads') }}">Uploads</a>
+                  <a class="nav-link" href="{{ url_for('list_uploads') }}">Uploads</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('list_outputs') }}">Outputs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('upload_to_bc365') }}">Upload to BC365</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        <div class="container">
+            <h1 class="mt-5">Converted Files</h1>
+            <ul class="list-group mt-3">
+                {% for file in files %}
+                <li class="list-group-item">
+                    {{ file }}
+                    <div class="float-right">
+                        <a href="{{ url_for('download_file', filename=file, format='json') }}" class="btn btn-primary btn-sm">Download as JSON</a>
+                        <a href="{{ url_for('download_file', filename=file, format='xml') }}" class="btn btn-secondary btn-sm">Download as XML</a>
+                        <a href="{{ url_for('download_file', filename=file, format='csv') }}" class="btn btn-success btn-sm">Download as CSV</a>
+                    </div>
+                </li>
+                {% endfor %}
             </ul>
+            <a href="{{ url_for('home') }}" class="btn btn-secondary mt-3">Back to Home</a>
         </div>
-    </nav>
-    <div class="container">
-        <h1 class="mt-5">Converted Files</h1>
-        <ul class="list-group mt-3">
-            {% for file in files %}
-            <li class="list-group-item">
-                {{ file }}
-                <div class="float-right">
-                    <a href="{{ url_for('download_file', filename=file, format='json') }}" class="btn btn-primary btn-sm">Download as JSON</a>
-                    <a href="{{ url_for('download_file', filename=file, format='xml') }}" class="btn btn-secondary btn-sm">Download as XML</a>
-                </div>
-            </li>
-            {% endfor %}
-        </ul>
-        <a href="{{ url_for('home') }}" class="btn btn-secondary mt-3">Back to Home</a>
-    </div>
-</body>
-</html>
+    </body>
+    </html>
